<resources>
    <string name="ga_trackingId">UA-39251554-1</string>
    <string name="crop_16x9">16:9</string>
    <string name="crop_1x1">1:1</string>
    <string name="crop_3x2">3:2</string>
    <string name="crop_4x3">4:3</string>
    <string name="crop_5x4">5:4</string>
    <string name="add">Add</string>
    <string name="add_a_control_point">ADD A CONTROL POINT</string>
    <string name="undo_upoint_add">Add Control Point</string>
    <string name="open_library_message">All changes will be lost, tap “Open” to open a new image.</string>
    <string name="will_revert">All changes will be lost, tap “Revert” to revert your image to its original state.</string>
    <string name="param_Ambiance">AMBIANCE</string>
    <string name="progress_apply">Apply...</string>
    <string name="apply_label">Apply</string>
    <string name="param_CropAspectRatio">ASPECT RATIO</string>
    <string name="filtericon_automatik">Auto Correct</string>
    <string name="back_label">Back</string>
    <string name="filtericon_black_white">Black &amp; White</string>
    <string name="param_BlurRadius">BLUR RADIUS</string>
    <string name="drama_style2">Bright 1</string>
    <string name="drama_style3">Bright 2</string>
    <string name="param_Brightness">BRIGHTNESS</string>
    <string name="cancel_btn">Cancel</string>
    <string name="param_Center">CENTER</string>
    <string name="filtericon_center_focus">Center Focus</string>
    <string name="param_CenterSize">CENTER SIZE</string>
    <string name="param_FineTuneColor">COLOR CORRECTION</string>
    <string name="compare_btn">Compare</string>
    <string name="param_Contrast">CONTRAST</string>
    <string name="param_FixExposure">CONTRAST CORRECTION</string>
    <string name="could_not_load">Could not load image</string>
    <string name="could_not_load__extreme_aspect_ratio">The image cannot be loaded due to the length of one of the image\'s dimensions.</string>
    <string name="could_not_save">Could not save image</string>
    <string name="filtericon_crop">Crop</string>
    <string name="centerfocus_style4">Dark 1</string>
    <string name="drama_style4">Dark 1</string>
    <string name="centerfocus_style5">Dark 2</string>
    <string name="drama_style5">Dark 2</string>
    <string name="crop_din">DIN</string>
    <string name="filtericon_drama">Drama</string>
    <string name="drama_style0">Drama 1</string>
    <string name="drama_style1">Drama 2</string>
    <string name="param_FilterStrength">FILTER STRENGTH</string>
    <string name="centerfocus_style1">Fog</string>
    <string name="frame">Frame</string>
    <string name="param_FrameOffset">FRAME OFFSET</string>
    <string name="param_FrameWidth">FRAME WIDTH</string>
    <string name="crop_free">Free</string>
    <string name="param_Grain">GRAIN</string>
    <string name="filtericon_grunge">Grunge</string>
    <string name="menu_help">Help</string>
    <string name="hide">Hide</string>
    <string name="image">Image</string>
    <string name="intent_subject">Image created with Snapseed</string>
    <string name="centerfocus_style0">Lens Blur</string>
    <string name="centerfocus_style2">Light 1</string>
    <string name="centerfocus_style3">Light 2</string>
    <string name="undo_upoint_move">Move Control Point</string>
    <string name="menu_online_help">Online Help</string>
    <string name="param_Opacity">OPACITY</string>
    <string name="open_library_btn">Open</string>
    <string name="open_library">Open Image</string>
    <string name="crop_original">Original</string>
    <string name="preview">Preview</string>
    <string name="processing">Processing ...</string>
    <string name="properties">Properties</string>
    <string name="random_frame">Random frame</string>
    <string name="randomize_texture">Randomize texture</string>
    <string name="btn_aspect_ratio">Ratio</string>
    <string name="redo">Redo</string>
    <string name="undo_upoint_delete">Remove Control Point</string>
    <string name="reset">Reset</string>
    <string name="undo_upoint_reset">Reset Control Point</string>
    <string name="revert_btn">Revert</string>
    <string name="revert_title">Revert Image</string>
    <string name="rotate">Rotate</string>
    <string name="rotate_left">Rotate Left</string>
    <string name="rotate_right">Rotate Right</string>
    <string name="param_Saturation">SATURATION</string>
    <string name="save_btn">Save</string>
    <string name="saving_image">Saving Image ...</string>
    <string name="select_a_control_point">SELECT A CONTROL POINT</string>
    <string name="filtericon_local_adjust">Selective Adjust</string>
    <string name="param_Shadows">SHADOWS</string>
    <string name="share_btn">Share</string>
    <string name="menu_show_overlay">Show Overlay</string>
    <string name="shuffle">Shuffle</string>
    <string name="param_size">SIZE</string>
    <string name="filtericon_rotate">Straighten &amp; Rotate</string>
    <string name="param_StraightenAngle">STRAIGHTEN ANGLE</string>
    <string name="param_Style">STYLE</string>
    <string name="style">Style</string>
    <string name="successfully_saved">Successfully saved</string>
    <string name="texture_label">Texture</string>
    <string name="param_TextureStrength">TEXTURE STRENGTH</string>
    <string name="filtericon_tiltShift">Tilt-Shift</string>
    <string name="filtericon_tuneimage">Tune Image</string>
    <string name="undo">Undo</string>
    <string name="filtericon_vintage">Vintage Films</string>
    <string name="param_Warmth">WARMTH</string>
    <string name="filtericon_details">Details</string>
    <string name="param_Structure">STRUCTURE</string>
    <string name="param_Sharpening">SHARPENING</string>
    <string name="loupe">Loupe</string>
    <string name="param_StyleStrength">STYLE STRENGTH</string>
    <string name="param_Transition">TRANSITION</string>
    <string name="param_BlurStrength">BLUR STRENGTH</string>
    <string name="tilt_and_shift_linear">Linear</string>
    <string name="tilt_and_shift_elliptical">Elliptical</string>
    <string name="help_cancel">TAP HERE%1$nTO CANCEL</string>
    <string name="help_apply">TAP HERE%1$nTO APPLY</string>
    <string name="overlay_crop_edge_rect">DRAG ANY EDGE OR CORNER%1$nTO ADJUST CROP</string>
    <string name="overlay_crop_pinch_rect">USE THE PINCH GESTURE TO%1$nKEEP CURRENT ASPECT RATIO</string>
    <string name="overlay_details_loupe">ACTIVATE LOUPE</string>
    <string name="overlay_loupe_gesture">TIP: DRAG LOUPE AROUND%1$nTO CHECK THE DETAILS</string>
    <string name="overlay_randomize_frame">RANDOMIZE FRAME</string>
    <string name="overlay_updown_gesture">SWIPE UP &amp; DOWN%1$nTO SELECT ENHANCEMENT</string>
    <string name="overlay_leftright_gesture">SWIPE LEFT &amp; RIGHT%1$nTO ADJUST SELECTED ENHANCEMENT</string>
    <string name="overlay_select_texture">SELECT TEXTURE</string>
    <string name="overlay_drag_gesture">TAP &amp; DRAG TO%1$nPLACE CENTER POINT</string>
    <string name="overlay_updown_leftright_gesture">SWIPE LEFT &amp; RIGHT TO%1$nADJUST ENHANCEMENT%2$nOR UP &amp; DOWN TO%3$nSELECT ENHANCEMENT</string>
    <string name="overlay_pinch_gesture">PINCH &amp; ZOOM TO%1$nCONTROL CENTER SIZE</string>
    <string name="overlay_local_adjust_2_gesture">SWIPE LEFT &amp; RIGHT TO%1$nADJUST ENHANCEMENT%2$nOR UP &amp; DOWN TO SELECT%3$nENHANCEMENT</string>
    <string name="overlay_local_adjust_1_gesture">TAP ADD AND%1$nTHEN TAP ON YOUR%2$nIMAGE TO ADD A%3$nCONTROL POINT</string>
    <string name="overlay_local_adjust_1_number">1</string>
    <string name="overlay_local_adjust_2_number">2</string>
    <string name="overlay_local_adjust_3_number">3</string>
    <string name="overlay_local_adjust_3_gesture">PINCH &amp; ZOOM TO%1$nADJUST THE REACH%2$nOF YOUR CONTROL%3$nPOINT</string>
    <string name="overlay_straighten_rotate_ccw">COUNTER-CLOCKWISE</string>
    <string name="overlay_straighten_rotate_cw">CLOCKWISE</string>
    <string name="overlay_straighten_text">SWIPE UP &amp; DOWN TO%1$nSTRAIGHTEN YOUR PHOTO</string>
    <string name="overlay_rotate_text">TAP ROTATE LEFT OR ROTATE RIGHT TO%1$nROTATE YOUR PHOTO BY 90 DEGREES</string>
    <string name="overlay_rotate_gesture">USE ROTATE TO%1$nCONTROL ANGLE</string>
    <string name="overlay_share_image">FACEBOOK, FLICKR…</string>
    <string name="overlay_save_image">SAVE TO YOUR%1$nPHOTO LIBRARY</string>
    <string name="overlay_open_library">OPEN IMAGE</string>
    <string name="overlay_more_help">TAP HERE FOR%1$nMORE HELP</string>
    <string name="overlay_scroll_filterlist_portrait">SCROLL LEFT &amp; RIGHT%1$nTO CHANGE BETWEEN%2$nBASIC ADJUSTMENTS AND%3$nCREATIVE ADJUSTMENTS</string>
    <string name="overlay_scroll_filterlist_landscape">SCROLL UP &amp; DOWN%1$nTO CHANGE BETWEEN%2$nBASIC ADJUSTMENTS AND%3$nCREATIVE ADJUSTMENTS</string>
    <string name="overlay_select_style">SELECT STYLE</string>
    <string name="overlay_tap_anywhere_to_dismiss">TAP ANYWHERE TO DISMISS</string>
    <string name="overlay_ts_pinch_gesture">PINCH &amp; ZOOM TO CONTROL SIZE</string>
    <string name="app_name">Snapseed</string>
    <string name="no_writable_sd_card">The SD card could not be written to or there is no SD card available.</string>
    <string name="menu_upoint_copy">Copy</string>
    <string name="menu_upoint_cut">Cut</string>
    <string name="menu_upoint_delete">Delete</string>
    <string name="menu_upoint_paste">Paste</string>
    <string name="menu_upoint_reset">Reset</string>
    <string name="undo_upoint_cut">Cut Control Point</string>
    <string name="undo_upoint_paste">Paste Control Point</string>
    <string name="progress_loading">Loading...</string>
    <string name="param_CropCoordinates">MOVE CROP AREA</string>
    <string name="param_CropRotate">ROTATE CROP AREA</string>
    <string name="param_CropResize">RESIZE CROP AREA</string>
    <string name="will_strink_image_message">The image you loaded is too large and has been resized to %1$d x %2$d pixels.</string>
    <string name="param_SaturationVariance">VARIANCE</string>
    <string name="colorFilter">Color Filter</string>
    <string name="neutral">Neutral</string>
    <string name="red_filter">Red</string>
    <string name="orange_filter">Orange</string>
    <string name="yellow_filter">Yellow</string>
    <string name="green_filter">Green</string>
    <string name="param_Vignette">Vignette</string>
    <string name="inner_brightness">INNER BRIGHTNESS</string>
    <string name="outer_brightness">OUTER BRIGHTNESS</string>
    <string name="overlay_tap_to_compare">TAP ON PICTURE TO COMPARE</string>
    <string name="overlay_rotate_text_phone">TAP HERE TO ROTATE</string>
    <string name="retrolux">Retrolux</string>
    <string name="weak">Weak</string>
    <string name="strong">Strong</string>
    <string name="presets">Presets</string>
    <string name="overlay_open_save_share">Open, Save,%1$nShare...</string>
    <string name="choose_frame">CHOOSE FRAME OR OPTION</string>
    <string name="unit_byte">Byte</string>
    <string name="unit_kb">KB</string>
    <string name="unit_mb">MB</string>
    <string name="unit_gb">GB</string>
    <string name="fine">Fine</string>
    <string name="soft">Soft</string>
    <string name="dirt">Dirt</string>
    <string name="dynamic">Dynamic</string>
    <string name="crisp">Crisp</string>
    <string name="param_LightLeakStrength">LIGHT LEAKS</string>
    <string name="param_ScratchesStrength">SCRATCHES</string>
    <string name="format">Format</string>
    <string name="colorized">Colorized</string>
    <string name="pref_about">ABOUT</string>
    <string name="pref_about_build_version">Build version</string>
    <string name="pref_about_privacy_policy">Privacy Policy</string>
    <string name="pref_about_privacy_policy_url">http://www.google.com/intl/en/policies/privacy/</string>
    <string name="pref_about_terms_of_service">Terms of service</string>
    <string name="pref_about_terms_of_service_url">http://www.google.com/intl/en/policies/terms/</string>
</resources>